<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Ambient settings -->
    <string name="ambient_enable">Use ambient display</string>

    <!-- Dirac settings -->
    <string name="dirac_enable">Enable dirac</string>
    <string name="dirac_title">Mi Sound Enhancer</string>
    <string name="dirac_summary">Optimize audio quality</string>
    <string name="dirac_headset_title">Choose a headphones type</string>
    <string name="dirac_preset_title">Choose a preset</string>
    <string name="dirac_hifi_enable_title"> Enable Hi-fi</string>

    <!-- Dirac settings: Hi-Fi -->
    <string name="dirac_hifi_title">Hi-Fi</string>
    <string name="dirac_hifi_summary">Decrease noise and Distortion and increase audio quality</string>

    <!-- Dirac settings: headset profiles -->
    <string name="dirac_headset_default">Default</string>
    <string name="dirac_headset_earbuds">Mi Earbuds</string>
    <string name="dirac_headset_in_ear_2013">Mi In-Ear (2013)</string>
    <string name="dirac_headset_piston_1">Mi Piston-1</string>
    <string name="dirac_headset_general">General</string>
    <string name="dirac_headset_general_inear">General In-Ear</string>
    <string name="dirac_headset_piston_basic">Basic Edition</string>
    <string name="dirac_headset_piston_2">Mi Piston-2</string>
    <string name="dirac_headset_piston_standard">Standard Edition</string>
    <string name="dirac_headset_headphone">Mi Headphones</string>
    <string name="dirac_headset_piston_youth">Youth Edition</string>
    <string name="dirac_headset_piston_color">Color Edition</string>
    <string name="dirac_headset_in_ear">Mi In-Ear</string>
    <string name="dirac_headset_capsule">Mi Capsule</string>
    <string name="dirac_headset_in_ear_pro">Mi In-Ear Pro</string>
    <string name="dirac_headset_comfort">Mi Comfort</string>
    <string name="dirac_headset_reduction_noise">Mi Noise Cancelling Type-C</string>
    <string name="dirac_headset_cancelling">Mi Noise Cancelling 3.5mm</string>
    <string name="dirac_headset_half_in_ear">Mi Half In-Ear</string>
    <string name="dirac_headset_in_ear2">Mi In-Ear 2</string>
    <string name="dirac_headset_earphone_basic">Mi Earphones Basic</string>
    <string name="dirac_headset_earphone">Mi Earphones</string>

    <!-- Dirac settings: Equalizer presets -->
    <string name="dirac_preset_default">Default</string>
    <string name="dirac_preset_rock">Rock</string>
    <string name="dirac_preset_jazz">Jazz</string>
    <string name="dirac_preset_pop">Pop</string>
    <string name="dirac_preset_classical">Classical</string>
    <string name="dirac_preset_hiphop">Hip Hop</string>
    <string name="dirac_preset_blues">Blues</string>
    <string name="dirac_preset_electronic">Electronic</string>
    <string name="dirac_preset_country">Country</string>
    <string name="dirac_preset_dance">Dance</string>
    <string name="dirac_preset_metal">Metal</string>
    <string name="dirac_preset_bass_booster">Bass Booster</string>

    <!-- Popup camera settings -->
    <string name="popup_title">Popup camera settings</string>
    <string name="popup_led_title">Camera LED</string>
    <string name="popup_led_summary">Show LED light when the front camera appears and retracts</string>
    <string name="popup_sound_title">Popup camera sound effects</string>
    <string name="popup_title_muqin">Xylophone</string>
    <string name="popup_title_yingyan">Condor</string>
    <string name="popup_title_mofa">Magic</string>
    <string name="popup_title_jijia">Mecha</string>
    <string name="popup_title_chilun">Gearwheel</string>
    <string name="popup_title_cangmen">Cabin door</string>
    <string name="popup_calibration_title">Calibration</string>
    <string name="popup_calibration_summary">Calibrate the popup camera motor</string>
    <string name="popup_calibration_warning_title">Motor calibration</string>
    <string name="popup_calibration_warning_text">Unnecessary use of calibration may cause permanent damage. It is recommended to calibrate the popup camera motor only in case of it not moving properly or it being in incorrect position!</string>

    <!-- Popup camera strings -->
    <string name="popup_camera_tip">Warning</string>
    <string name="popup_camera_takeback_failed_calibrate">Couldn\'t close front camera. Try calibrating the motor.</string>
    <string name="popup_camera_popup_failed_calibrate">Couldn\'t open front camera. Try calibrating the motor.</string>
    <string name="popup_camera_calibrate_running">Front camera cannot be used during calibration.</string>
    <string name="popup_camera_calibrate_now">Calibrate</string>
    <string name="popup_camera_calibrate_failed">Couldn\'t calibrate</string>
    <string name="popup_camera_calibrate_success">Calibrated successfully. You can open the front camera now.</string>

    <!-- Raise to wake gesture-->
    <string name="raise_to_wake_title">Wake up</string>
    <string name="raise_to_wake_summary">Wake up the device instead of pulsing notifications</string>

    <!-- Popup camera dialog -->
    <string name="popup_camera_dialog_message">Do you want to raise the front facing camera?</string>
    <string name="popup_camera_dialog_no">No</string>
    <string name="popup_camera_dialog_raise">Yes</string>
    <string name="always_on_camera_dialog_title">Front camera raise dialog</string>
    <string name="always_on_camera_dialog_summary_on">Always ask before opening</string>
    <string name="always_on_camera_dialog_summary_off">Only ask when the screen is off</string>

    <!-- Clear Speaker -->
    <string name="clear_speaker_title">Clear speaker</string>
    <string name="clear_speaker_summary">Play a 30-second audio to clear the speaker</string>
    <string name="clear_speaker_description">Run this feature once or twice if you find that your speaker is lightly blocked by dust. Set media volume to maximum.\n\nIf the speaker is blocked heavily, run this feature 2-5 times while shaking your device with the speaker facing downwards.\n\nWARNING: Ensure that any headphones are unplugged.</string>

    <!--Display settings fragment -->
    <string name="display_settings_title">Custom Display Settings</string>
    <string name="display_settings_summary">HBM, DC Dimming</string>

    <!-- DC dimming settings -->
    <string name="dc_dimming_enable_title">DC Dimming</string>
    <string name="dc_dimming_enable_summary">DC Dimming reduces eye strain in low light conditions (Note: reduces image quality)</string>
    <string name="dc_dimming_enable_summary_not_supported">DC Dimming is not currently supported by the kernel</string>

    <!-- HBM settings -->
    <string name="hbm_mode_title">High Brightness Mode</string>
    <string name="hbm_mode_summary">High Brightness Mode allows the display panel brightness to go above the maximum stock value, which helps in improving visibility in direct sunlight</string>
    <string name="hbm_enable_summary_not_supported">HBM is not currently supported by the kernel</string>

</resources>
